--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
                 <button class="button-container">Click Me</button>
             </div>
         </div>
+            <div class="quote-text" id="quote-text">
+                "The only limit to our realization of tomorrow will be our doubts of today."
+            </div>
             <div class="author-text" id="author-text">
-                Author
-                <div class="quote-author" id="quote-author">
-                    "The only limit to our realization of tomorrow will be our doubts of today."
-                </div>
-
+                — Author Name
             </div>
     </div>
 
