--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/webfont-montserrat/index.min.css">
     <title>Document</title>
 </head>
@@ -12,8 +12,15 @@
     <div class="code-container" id="code-container">
         <h1 class="title">Be Brave</h1>
         <div class="code-text" id="code-text">
-            <div class="button-container">
-                <button class="button-container">Click Me</button>
+            <div class="buttons-wrapper">
+                <button class="button-container" id="new-quote-btn">
+                    <i class="fas fa-quote-left"></i>
+                    New Quote
+                </button>
+                <button class="linkedin-share-btn" id="linkedin-share-btn">
+                    <i class="fab fa-linkedin"></i>
+                    Share to LinkedIn
+                </button>
             </div>
         </div>
             <div class="quote-text" id="quote-text">
